--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -4,9 +4,12 @@
 
     <meta charset="utf-8">
      <title>Contact</title>
-        <h1>Brendan Carducci</h1>
-            <h2>319 Euclid Avenue, Syracuse, New York, 13244</h2>
-                <h3><a href="mailto:bacarduc@syr.edu">Brendan Carducci Email</a></h3>
+        <h1>Contact</h1>
+            <l1>319 Euclid Avenue</l1>
+            <l2>Syracuse, New York</l2>
+            <l3>13244</l3>
+                
+                <h2><a href="mailto:bacarduc@syr.edu">Brendan Carducci Email</a></h2>
     </head>
 
     <body>
