--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -4,18 +4,22 @@
 
     <meta charset="utf-8">
      <title>Contact</title>
-        <h1>Contact</h1>
-            <l1>319 Euclid Avenue | </l1>
-            <l2>Syracuse, New York | </l2>
-            <l3>13244</l3>
-                
-                <h2><a href="mailto:bacarduc@syr.edu">Brendan Carducci Email</a></h2>
+
     </head>
 
     <body>
-        <a href="http://www.https://www.linkedin.com/in/brendan-carducci/" target="_blank">My LinkedIn Page</a>
-    </body>
+        <h1>Brendan Carducci</h1>
+        <l1>319 Euclid Avenue | </l1>
+        <l2>Syracuse, New York | </l2>
+        <l3>13244</l3>
+            
+            <h2><a href="mailto:bacarduc@syr.edu">Brendan Carducci Email</a></h2>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2263005960203!2d-76.1293542202399!3d43.03666987924931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f37465934245%3A0xa38b071d18733e5f!2s319%20Euclid%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1614271287115!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+        <a href="http://www.https://www.linkedin.com/in/brendan-carducci/" target="_blank">My LinkedIn Page <img src="../../images../images/linkedin.png"> </a>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2263005960203!2d-76.1293542202399!3d43.03666987924931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f37465934245%3A0xa38b071d18733e5f!2s319%20Euclid%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1614271287115!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+   
+    </body>
 
 </html>
