--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     
     <head>
 
@@ -9,9 +9,9 @@
 
     <body>
         <h1>Brendan Carducci</h1>
-        <l1>319 Euclid Avenue | </l1>
-        <l2>Syracuse, New York | </l2>
-        <l3>13244</l3>
+        <li>319 Euclid Avenue | </li>
+        <li>Syracuse, New York | </li>
+        <li>13244</li>
             
             <h2><a href="mailto:bacarduc@syr.edu">Brendan Carducci Email</a></h2>
 
