--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -27,7 +27,7 @@
         <label for="fname">First name:</label>
         <input type="text" id="fname" name="fname">
 
-        <label for="NCAAconfernece">Choose a conference:</label>
+        <label for="NCAAconference">Choose a conference:</label>
         <select id="NCAAconference" name="NCAAconference">
           <option value="acc">ACC</option>
           <option value="big east">Big East</option>
