--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -6,18 +6,18 @@
         <style>
         table, th, td {border:1px solid black;}
         </style>
-        <link rel="stylesheet" href="/pathstyles.css">
+        <link rel="styles" href="/ist263/lab06/styles.css">
     </head>
     <body>
-
 <table>
     <caption>Personal Skills</caption>
+    <h1 class="special" >Lorem ipsum </h1>
     <tr>
        <th>Category</th> 
        <th>Skill</th>
-       <th>Competancy</th>
+       <th>Competancy</th> 
     </tr>
-    <tr>
+    <tr class="evenrow">
         <td>Interpersonal</td>
         <td>Leadership</td>
         <td>Exemplory</td>
@@ -27,7 +27,7 @@
         <td>Accountability</td>
         <td>Exemplory</td>
     </tr>
-    <tr>
+    <tr class="evenrow"></tr>
         <td>Technical</td>
         <td>Microsoft Excel</td>
         <td>Master</td>
@@ -37,7 +37,7 @@
         <td>Coachability</td>
         <td>Exemplory</td>
     </tr>
-    <tr>
+    <tr class="evenrow"></tr>
         <td>Technical</td>
         <td>Salesforce</td>
         <td>Master</td>
@@ -47,7 +47,7 @@
         <td>Writing</td>
         <td>Excellent</td>
     </tr>
-    <tr>
+    <tr class="evenrow"></tr>
         <td>Professional</td>
         <td>Time Management</td>
         <td>Exemplory</td>
@@ -57,7 +57,7 @@
         <td>Communication</td>
         <td>Good</td>
     </tr>
-    <tr>
+    <tr class="evenrow"></tr>
         <td>Professional</td>
         <td>Creativity</td>
         <td>Good</td>
