--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -6,12 +6,12 @@
         <style>
         table, th, td {border:1px solid black;}
         </style>
-        <link rel="styles" href="/ist263/lab06/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
 <table>
     <caption>Personal Skills</caption>
-    <h1 class="special" >Lorem ipsum </h1>
+    
     <tr>
        <th>Category</th> 
        <th>Skill</th>
