--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
      <title>Contact</title>
-     <link rel="styles" href="/ist263/lab06/styles.css">
+     <link rel="stylesheet" href="styles.css">
 
     </head>
 
