--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -27,7 +27,7 @@
         <td>Accountability</td>
         <td>Exemplory</td>
     </tr>
-    <tr class="evenrow"></tr>
+    <tr class="evenrow">
         <td>Technical</td>
         <td>Microsoft Excel</td>
         <td>Master</td>
@@ -37,7 +37,7 @@
         <td>Coachability</td>
         <td>Exemplory</td>
     </tr>
-    <tr class="evenrow"></tr>
+    <tr class="evenrow">
         <td>Technical</td>
         <td>Salesforce</td>
         <td>Master</td>
@@ -47,7 +47,7 @@
         <td>Writing</td>
         <td>Excellent</td>
     </tr>
-    <tr class="evenrow"></tr>
+    <tr class="evenrow">
         <td>Professional</td>
         <td>Time Management</td>
         <td>Exemplory</td>
@@ -57,7 +57,7 @@
         <td>Communication</td>
         <td>Good</td>
     </tr>
-    <tr class="evenrow"></tr>
+    <tr class="evenrow">
         <td>Professional</td>
         <td>Creativity</td>
         <td>Good</td>
