--- a/lab08/index.html
+++ b/lab08/index.html
@@ -4,6 +4,11 @@
             <meta charset="utf-8">
             <title>Bdawg-Bio</title>
             <link rel="stylesheet" href="styles2.css">
+            <style>
+                .quote {float:right;}
+                .img1 {float:right; margin-left:20px; margin: right 15px;}
+                .stopfloat {clear:both}
+            </style>
         </head>
         
         <body>
@@ -20,11 +25,9 @@
             <p>
                 My name is Brendan Carducci. I am currently a Policy Studies major in the Maxwell School.
             </p>
-
-            <img src="../Images/lab05pcc.png" alt="Photoshop">
-
-            <div class="clear"></div>
-
+            <div class="img1"> 
+                <img src="../Images/lab05pcc.png" class="img1" alt="Photoshop">
+            </div>
     <main> 
         <p>
             I was drawn to this major because of my interest in politics. Unlike the Political Science, which is more focused in political theory, policy is all about real-world solutions to societal problems. This is what I find most interesting about the major.
@@ -47,11 +50,14 @@
 
     </main>
 
-<footer> 
-    <hr>
-    &copy;2020
-    <p>Some folks look at me and see a certain swagger, which in Texas is called 'walking.' - George W. Bush</p>
-    </body>
-</footer>
+ <footer> 
+        <hr>
+        &copy;2020
+        <div class="quote"> 
+            <p>Some folks look at me and see a certain swagger, which in Texas is called 'walking.' - George W. Bush</p>
+        </div>
+     </body>
+ </footer>
+
 
     </html>
