--- a/lab09/index.html
+++ b/lab09/index.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="styles2.css">
             <style>
                 .quote {float:right;}
-                .img1 {float:right; margin-left:20px; margin: right 15px;}
+                .img1 {float:right; margin-left:20px; margin: right 15px; max-width: 100%;}
                 .stopfloat {clear:both}
             </style>
         </head>
