--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -10,8 +10,8 @@
          .links {float:right; margin-left: 40px; padding-top: 14px;}
          .stopfloat {clear:both}
          .row3 {display:flex; padding: 10px; padding-right: 40%; margin-right: 25px; margin-left: 25px; margin-top: 14px; background-color: #ABA9C1; border-radius: 0.5em;}
-         .map {order: 2; margin-left: 175px;}
-         .form {order: 1; padding-top: 20px; margin-left: 15px;}
+         .map {order: 2; margin-left: 175px; display:flex; flex-wrap: wrap;}
+         .form {order: 1; padding-top: 20px; margin-left: 15px; display:flex; flex-wrap: wrap;}
          img {width: 35px; height: 20px;}
      </style>
 
