--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -10,7 +10,7 @@
          .links {float:right; margin-left: 40px; padding-top: 14px;}
          .stopfloat {clear:both}
          .row3 {display:flex; padding: 10px; padding-right: 40%; margin-right: 25px; margin-left: 25px; margin-top: 14px; background-color: #ABA9C1; border-radius: 0.5em;}
-         .map {order: 2; margin-left: 175px; display:flex; flex-wrap: wrap;}
+         .iframe {order: 2; margin-left: 175px; display:flex; flex-wrap: wrap;}
          .form {order: 1; padding-top: 20px; margin-left: 15px; display:flex; flex-wrap: wrap;}
          img {width: 35px; height: 20px;}
      </style>
@@ -73,9 +73,8 @@
 
         </div>
 
-            <div class="map"> 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2263005960203!2d-76.1293542202399!3d43.03666987924931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f37465934245%3A0xa38b071d18733e5f!2s319%20Euclid%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1614271287115!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+            
 
 
     </div>
