--- a/websiteproject/titlepage.html
+++ b/websiteproject/titlepage.html
@@ -33,10 +33,12 @@
         You’re the pride and joy of Illinois, Chicago Bears, bear down.”
     </p>
     </div>
-
+    <div class="logo"> 
+        <img src="../websiteproject/sitemedia/images.png" class="logo" alt="logo">
+    </div>
     <footer> 
         <hr>
-        &copy;2020
+        &copy;2021
         <div class="quote"> 
             <p>Before you can win, you have to believe you are worthy. - Mike Ditka</p>
         </div>
