--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
+            <link rel="stylesheet" href="projectCSS.css">
     </head>
 <body>
     <nav>
