--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -5,6 +5,10 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <style>
+                .soldier {float:right; margin-left: 20px;margin-right: 15px;}
+                .fightsong {display: flex; justify-content: center; margin-top: 10px; margin-left: 400px; margin-right: 15px; margin-bottom: 10px; font-size: 30px;}
+            </style>
     </head>
 <body>
     <nav>
@@ -28,10 +32,15 @@
     <div class="fightsong"> 
     <p>
         “Bear down, Chicago Bears, make every play clear the way to victory;
+        <br>
         Bear down, Chicago Bears, put up a fight with a might so fearlessly.
+        <br>
         We’ll never forget the way you thrilled the nation with your T-formation.
+        <br>
         Bear down, Chicago Bears, and let them know why you’re wearing the crown.
+        <br>
         You’re the pride and joy of Illinois, Chicago Bears, bear down.”
+        <br>
     </p>
     </div>
     <div class="logo"> 
