--- a/websiteproject/materials/players.html
+++ b/websiteproject/materials/players.html
@@ -5,6 +5,14 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <style>
+                .head {margin-left: 480px; color:orangered;}
+                .footer{float: inline-start; font-size: 25px; color:#ffffff}
+                .walterpayton {float: left; margin-left: 10px; margin-right: 15px;}
+                .khalilmack {float:right; margin-left: 10px; margin-right: 15px;}
+                .paragraph1 {margin-left: 10px; font-size: 25px; color: #ffffff}
+                .paragraph2 {margin-left: 10px; font-size: 25px; color: #ffffff}
+            </style>
     </head>
 <body>
     <nav>
@@ -22,7 +30,7 @@
     </div>
 
     <div class="walterpayton"> 
-        <img src="../materials/sitemedia/payton__1_.0.jpg" class="walterpayton" alt="walterpayton">
+        <img src="../materials/sitemedia/walterpayton.jpg" class="walterpayton" alt="walterpayton">
     </div>
 
     <div class="paragraph1"> 
@@ -41,13 +49,16 @@
         <img src="../materials/sitemedia/images.jpg" class="khalilmack" alt="khalilmack">
     </div>
 
-    <footer> 
-        <hr>
-        &copy;2020
-        <div class="quote"> 
-            <p>Before you can win, you have to believe you are worthy. - Mike Ditka</p>
-        </div>
-    </footer>
+    <div class="footer">
+        <footer> 
+            <hr>
+            &copy;2021
+            <div class="quote"> 
+                <p>If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka</p>
+            </div>
+    
+        </footer>
+    </div>
 
 </body>
 
