--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -5,6 +5,14 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <style>
+                .head {margin-left: 480px; color:orangered;}
+                .footer{float: inline-start; font-size: 20px; color:#ffffff}
+                .quote {float: right;}
+                .fogbowl {float:right; margin-left: 10px; margin-right: 15px;}
+                .cutler {float: left; margin-left: 10px; margin-right: 15px;}
+                .paragraph1 {margin-left: 10px; font-size: 25px; color: #ffffff}
+            </style>
     </head>
 <body>
     <nav>
@@ -27,21 +35,29 @@
 
     <div class="paragraph1"> 
         <p>
-            The Chicago Bears rank 12th in the NFL in all-time playoff appearances. They have an overall record of 17-20 in the playoffs, with 12 of those wins happening in Chicago, and one of those victories being the 1985 Super Bowl. Chicago has more playoff appearances than some other historic franchises such as the Washington Redskins, Miami Dolphins, Denver Broncos, among others. The Bears playoff debut came in 1933, when they hosted the New York Giants at Wrigley Field. The Bears defeated the Giants on that December day, and were crowned NFL Champions as a result. Chicago’s most previous playoff appearance occurred in 2020. Chicago finished 8-8 in the regular season and went on the road to play the New Orleans Saints. Chicago lost that contest 21-9 and were bounced from the playoffs in the Wild Card Round. Nonetheless, one of the most famous NFL playoff games ever occurred at Soldier Field in Chicago. “The Fog Bowl” was a 1988 playoff game between the Chicago Bears and Philadelphia Eagles. An intense fog surrounded the field to the point where you could hardly see the quarterback from the sidelines. Chicago won this NFC divisional playoff by a 20-12 score. 
+            The Chicago Bears rank 12th in the NFL in all-time playoff appearances. They have an overall record of 17-20 in the playoffs, with 12 of those wins happening in Chicago, and one of those victories being the 1985 Super Bowl. Chicago has more playoff appearances than some other historic franchises such as the Washington Redskins, Miami Dolphins, Denver Broncos, among others. The Bears playoff debut came in 1933, when they hosted the New York Giants at Wrigley Field. The Bears defeated the Giants on that December day, and were crowned NFL Champions as a result. 
+        </p>
+            
+        <div class="Cutler"> 
+            <img src="../materials/sitemedia/cutler.jpg" class="cutler" alt="cutler">
+        </div>
+
+        <p>
+            Chicago’s most previous playoff appearance occurred in 2020. Chicago finished 8-8 in the regular season and went on the road to play the New Orleans Saints. Chicago lost that contest 21-9 and were bounced from the playoffs in the Wild Card Round. Nonetheless, one of the most famous NFL playoff games ever occurred at Soldier Field in Chicago. “The Fog Bowl” was a 1988 playoff game between the Chicago Bears and Philadelphia Eagles. An intense fog surrounded the field to the point where you could hardly see the quarterback from the sidelines. Chicago won this NFC divisional playoff by a 20-12 score. 
         </p>
     </div>
 
-    <div class="cutty"> 
-        <img src="../materials/sitemedia/cutty.jpg" class="cutty" alt="cutty">
-    </div>
 
-    <footer> 
-        <hr>
-        &copy;2021
-        <div class="quote"> 
-            <p>Before you can win, you have to believe you are worthy. - Mike Ditka</p>
-        </div>
-    </footer>
+    <div class="footer">
+        <footer> 
+            <hr>
+            &copy;2021
+            <div class="quote"> 
+                <p>If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka</p>
+            </div>
+    
+        </footer>
+    </div>
 
 </body>
 
