--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -7,7 +7,11 @@
             <link rel="stylesheet" href="projectCSS.css">
             <style>
                 .soldier {float:right; margin-left: 20px;margin-right: 15px;}
-                .fightsong {display: flex; justify-content: center; margin-top: 10px; margin-left: 400px; margin-right: 15px; margin-bottom: 10px; font-size: 30px;}
+                .fightsong {display: flex; justify-content: center; margin-top: 10px; margin-left: 400px; margin-right: 15px; margin-bottom: 10px; font-size: 35px; color: #ffffff;}
+                .fields {float: left; margin-left: 20px; margin-right: 10px;}
+                .logo {float:right; margin-left: 10px; margin-right: 15px; margin-bottom: 50px;}
+                .footer {float:inline-end; font-size: 30px; color: #ffffff}
+                .head {margin-left: 480px; color:orangered}
             </style>
     </head>
 <body>
@@ -29,6 +33,10 @@
         <img src="../materials/sitemedia/images-2.jpg" class="soldier" alt="soldier">
     </div>
 
+    <div class="fields"> 
+        <img src="../materials/sitemedia/fields.jpg" class="fields" alt="fields">
+    </div>
+
     <div class="fightsong"> 
     <p>
         “Bear down, Chicago Bears, make every play clear the way to victory;
@@ -41,18 +49,19 @@
         <br>
         You’re the pride and joy of Illinois, Chicago Bears, bear down.”
         <br>
+    </div>
     </p>
-    </div>
-    <div class="logo"> 
-        <img src="../materials/sitemedia/images.png" class="logo" alt="logo">
-    </div>
+    
+<div class="footer">
     <footer> 
         <hr>
         &copy;2021
         <div class="quote"> 
-            <p>Before you can win, you have to believe you are worthy. - Mike Ditka</p>
+            <p>If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka</p>
         </div>
+
     </footer>
+</div>
 
 </body>
 
