--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -5,6 +5,15 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <style>
+                .rivals {float:right; margin-left: 10px; margin-right: 15px;}
+                .lions {float: left; margin-left: 10px; margin-right: 15px;}
+                .stopfloat {clear:both}
+                .paragraph1 {margin-left: 10px; font-size: 20px; color: #ffffff}
+                .paragraph2 {margin-left: 10px; font-size: 20px; color: #ffffff}
+                .head {margin-left: 480px; color:orangered;}
+                .footer{float: inline-end; font-size: 20px; color:#ffffff}
+            </style>
     </head>
 <body>
     <nav>
@@ -27,23 +36,38 @@
 
     <div class="paragraph1"> 
         <p>
-        Arguably the most storied rivalry in football is between the Chicago Bears and Green Bay Packers. These two franchises are the oldest in the entire league and have competed against each other for over 100 seasons. Beginning in the year 1921, this matchup is the league’s most played with each team running into each other 202 times across the regular season and playoffs. Both teams have combined for 65 players in the Pro Football Hall of Fame, 22 NFL Championships, and 5 Super Bowls. An average football fan would assume this is the most continuous rivalry in the history of football. Nevertheless, that distinction belongs to the Green Bay Packers and Detroit Lions. Detroit and Green Bay have played twice each season since 1932. However, due to a 1982 NFL Players Association strike, Chicago and Green Bay did not play either matchup that season. Green Bay took the overall series lead in 2017, and now lead all-time 101-95-6. These two teams have met in the playoffs twice. The first playoff matchup between Green Bay and Chicago came in December of 1941, where the Bears defeated the Packers by a 33-14 score. Nearly 70 years later, both franchises embarked on their second ever playoff matchup. In 2010, both teams meet in Chicago for a chance to play in the Super Bowl. Chicago Bears quarterback Jay Cutler famously injured his knee during the game. After backup Todd Collins threw several consecutive incompletions, Bears coach Lovie Smith turned to third-string Caleb Hanie. Despite a valiant effort from the Bears third quarterback, Hanie ultimately threw a game-sealing interception into the gut of Packers defensive tackle B.J. Raji, in what was dub the fridge-six. Green Bay would ultimately win the contest 21-14, riding the momentum into the Super Bowl, where they defeated the Pittsburgh Steelers. 
+        Arguably the most storied rivalry in football is between the Chicago Bears and Green Bay Packers. These two franchises are the oldest in the entire league and have competed against each other for over 100 seasons. Beginning in the year 1921, this matchup is the league’s most played with each team running into each other 202 times across the regular season and playoffs. Both teams have combined for 65 players in the Pro Football Hall of Fame, 22 NFL Championships, and 5 Super Bowls. An average football fan would assume this is the most continuous rivalry in the history of football. Nevertheless, that distinction belongs to the Green Bay Packers and Detroit Lions. Detroit and Green Bay have played twice each season since 1932. However, due to a 1982 NFL Players Association strike, Chicago and Green Bay did not play either matchup that season. Green Bay took the overall series lead in 2017, and now lead all-time 101-95-6. 
+        </p>
+
+        <p>
+        These two teams have met in the playoffs twice. The first playoff matchup between Green Bay and Chicago came in December of 1941, where the Bears defeated the Packers by a 33-14 score. Nearly 70 years later, both franchises embarked on their second ever playoff matchup. In 2010, both teams meet in Chicago for a chance to play in the Super Bowl. Chicago Bears quarterback Jay Cutler famously injured his knee during the game. After backup Todd Collins threw several consecutive incompletions, Bears coach Lovie Smith turned to third-string Caleb Hanie. Despite a valiant effort from the Bears third quarterback, Hanie ultimately threw a game-sealing interception into the gut of Packers defensive tackle B.J. Raji, in what was dub the fridge-six. Green Bay would ultimately win the contest 21-14, riding the momentum into the Super Bowl, where they defeated the Pittsburgh Steelers. 
         </p>
     </div>
 
     <div class="paragraph2">
         <p>
-        Another important rivalry is between the Chicago Bears and Detroit Lions. The Bears and Lions have faced each other at least one time in each season since 1930. There have been a few unique quirks in this series. While this rivalry is not as significant as Bears-Packers, it still has a place in NFL history. The first meeting between these two franchises came in October of 1930, when the Lions were known as the Portsmouth Spartans. Before moving to Detroit, the franchise was located in Portsmouth, Ohio. The Spartans won that first matchup by a 7-6 score. Regardless, the overall series has been dominated by the Chicago Bears. Their overall record against the Lions is 102-75-5. Likely the largest contribution this rivalry has made to league history is the conception of a Thanksgiving game. Every Thanksgiving the NFL provides fans with three competitive football games, as that day serves as one of the league’s most viewed game days. When the Lions moved to Detroit, they decided to schedule an annual Thanksgiving Day contest to draw in fans. The 1934 Thanksgiving contest against the Chicago Bears proved to be successful, as a sold-out crowd in Detroit watched their Lions lose to Chicago 19-16. Since that 1934 matchup, Chicago and Detroit have faced off 17 more times on Thanksgiving, with Chicago holding a slight 10-8 series lead on this American holiday. Another freaky, yet sad consequence of this rivalry occurred in October of 1971. Lions’ wide receiver Chuck Hughes collapsed on the field and was rushed to the hospital. Sadly, Hughes did not make it, and remains the only NFL player to ever die on the field. 
+        Another important rivalry is between the Chicago Bears and Detroit Lions. The Bears and Lions have faced each other at least one time in each season since 1930. There have been a few unique quirks in this series. While this rivalry is not as significant as Bears-Packers, it still has a place in NFL history. The first meeting between these two franchises came in October of 1930, when the Lions were known as the Portsmouth Spartans. Before moving to Detroit, the franchise was located in Portsmouth, Ohio. The Spartans won that first matchup by a 7-6 score. Regardless, the overall series has been dominated by the Chicago Bears. Their overall record against the Lions is 102-75-5.
+        </p>
+        
+        <div class="lions"> 
+            <img src="../materials/sitemedia/lions.jpg" class="lions" alt="lions">
+        </div>
+
+        <p>
+        Likely the largest contribution this rivalry has made to league history is the conception of a Thanksgiving game. Every Thanksgiving the NFL provides fans with three competitive football games, as that day serves as one of the league’s most viewed game days. When the Lions moved to Detroit, they decided to schedule an annual Thanksgiving Day contest to draw in fans. The 1934 Thanksgiving contest against the Chicago Bears proved to be successful, as a sold-out crowd in Detroit watched their Lions lose to Chicago 19-16. Since that 1934 matchup, Chicago and Detroit have faced off 17 more times on Thanksgiving, with Chicago holding a slight 10-8 series lead on this American holiday. Another freaky, yet sad consequence of this rivalry occurred in October of 1971. Lions’ wide receiver Chuck Hughes collapsed on the field and was rushed to the hospital. Sadly, Hughes did not make it, and remains the only NFL player to ever die on the field. 
         </p>
     </div>
 
-    <footer> 
-        <hr>
-        &copy;2021
-        <div class="quote"> 
-            <p>Before you can win, you have to believe you are worthy. - Mike Ditka</p>
-        </div>
-    </footer>
+    <div class="footer">
+        <footer> 
+            <hr>
+            &copy;2021
+            <div class="quote"> 
+                <p>If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka</p>
+            </div>
+    
+        </footer>
+    </div>
 
 </body>
 
