--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -11,7 +11,7 @@
                 .fields {float: left; margin-left: 20px; margin-right: 10px;}
                 .logo {float:right; margin-left: 10px; margin-right: 15px; margin-bottom: 50px;}
                 .footer {float:inline-end; font-size: 30px; color: #ffffff}
-                .head {margin-left: 480px; color:orangered}
+                .head {display:flex; justify-content: center; color:orangered}
             </style>
     </head>
 <body>
