--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -5,6 +5,7 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
             <style>
                 .head {margin-left: 480px; color:orangered;}
                 .footer{float: inline-start; font-size: 20px; color:#ffffff}
