--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -5,6 +5,7 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
             <style>
                 .rivals {float:right; margin-left: 10px; margin-right: 15px;}
                 .lions {float: left; margin-left: 10px; margin-right: 15px;}
