--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -5,6 +5,7 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
             <style>
                 .soldier {float:right; margin-left: 20px;margin-right: 15px;}
                 .fightsong {display: flex; justify-content: center; margin-top: 10px; margin-left: 400px; margin-right: 15px; margin-bottom: 10px; font-size: 35px; color: #ffffff;}
