--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
      <title>Contact</title>
      <link rel="stylesheet" href="styles2.css">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
      <style>
          .row1 {float:left; padding: 10px; padding-right: 80%; margin-right: 25px; margin-left: 25px; background-color: #ABA9C1; border-radius: 0.5em; font-size: 2em;}
          .links {float:right; margin-left: 40px; padding-top: 14px;}
@@ -13,6 +15,7 @@
          .iframe {order: 2; margin-left: 125px; display:flex; flex-wrap: wrap;}
          .form {order: 1; padding-top: 20px; margin-left: 15px; display:flex; flex-wrap: wrap; font-size: 2em;}
          img {width: 35px; height: 20px;}
+         .h1, .h2 {font-family: 'Quicksand', sans-serif;}
      </style>
 
     </head>  
