--- a/lab10/index.html
+++ b/lab10/index.html
@@ -5,6 +5,8 @@
             <meta name="viewport" content="width=device-width, intial-scale:1"> 
             <title>Bdawg-Bio</title>
             <link rel="stylesheet" href="styles2.css">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
             <style>
                 .quote {float:right;}
                 .img1 {float:right; margin-left:20px; margin: right 15px; max-width: 100%;}
@@ -12,6 +14,7 @@
                 .main {font-size: 2em;}
                 .head {font-size: 2em;}
                 .pone {font-size: 2em;}
+                .h1 {font-family: 'Quicksand', sans-serif;}
             </style>
         </head>
         
