--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -7,6 +7,8 @@
         table, th, td {border:1px solid black;font-size: 2em;}
         </style>
         <link rel="stylesheet" href="styles2.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
 
