--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -6,6 +6,8 @@
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
             <style>
                 .head {margin-left: 480px; color:orangered;}
                 .footer{float: inline-start; font-size: 20px; color:#ffffff}
@@ -13,6 +15,7 @@
                 .fogbowl {float:right; margin-left: 10px; margin-right: 15px;}
                 .cutler {float: left; margin-left: 10px; margin-right: 15px;}
                 .paragraph1 {margin-left: 10px; font-size: 25px; color: #ffffff}
+                .body{font-family: 'News Cycle', sans-serif;}
             </style>
     </head>
 <body>
