--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -6,6 +6,9 @@
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
+
             <style>
                 .soldier {float:right; margin-left: 20px;margin-right: 15px;}
                 .fightsong {display: flex; justify-content: center; margin-top: 10px; margin-left: 400px; margin-right: 15px; margin-bottom: 10px; font-size: 35px; color: #ffffff;}
@@ -13,6 +16,7 @@
                 .logo {float:right; margin-left: 10px; margin-right: 15px; margin-bottom: 50px;}
                 .footer {float:inline-end; font-size: 30px; color: #ffffff}
                 .head {display:flex; justify-content: center; color:orangered}
+                .body{font-family: 'News Cycle', sans-serif;}
             </style>
     </head>
 <body>
