--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -6,6 +6,8 @@
             <title>Chicago Bears Reference</title>
             <link rel="stylesheet" href="projectCSS.css">
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
             <style>
                 .rivals {float:right; margin-left: 10px; margin-right: 15px;}
                 .lions {float: left; margin-left: 10px; margin-right: 15px;}
@@ -14,6 +16,7 @@
                 .paragraph2 {margin-left: 10px; font-size: 20px; color: #ffffff}
                 .head {margin-left: 480px; color:orangered;}
                 .footer{float: inline-end; font-size: 20px; color:#ffffff}
+                .body{font-family: 'News Cycle', sans-serif;}
             </style>
     </head>
 <body>
