--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -13,12 +13,13 @@
                 .lions {float: left; margin-left: 10px; margin-right: 15px;}
                 .stopfloat {clear:both}
                 .paragraph1 {margin-left: 10px; font-size: 20px; color: #ffffff}
-                .paragraph2 {display:flex; margin-left: 10px; font-size: 20px; color: #ffffff}
+                .paragraph2 {display:flex; font-size: 20px; color: #ffffff}
                 .head {margin-left: 480px; color:orangered;}
                 .footer{float: inline-end; font-size: 20px; color:#ffffff}
                 .body{font-family: 'News Cycle', sans-serif;}
                 .firstpara{flex:1; order:1}
-                .secondpara{flex:1; order:2}
+                .secondpara{flex:1; order:3; margin-right: 20px;}
+                .lions{flex:1; order:2}
             </style>
     </head>
 <body>
