--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -9,7 +9,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
             <style>
-                .head {margin-left: 480px; color:orangered;}
+                .head {display:flex; justify-content: center; color:orangered}
                 .footer{float: inline-start; font-size: 20px; color:#ffffff}
                 .quote {float: right;}
                 .fogbowl {float:right; margin-left: 10px; margin-right: 15px;}
@@ -19,15 +19,17 @@
             </style>
     </head>
 <body>
-    <nav>
-        <a href="titlepage.html">Home</a>
-        <strong>|</strong>
-        <a href="rivalry.html">Rivalry History</a>
-        <strong>|</strong>
-        <a href="playoff.html">Playoff History</a>
-        <strong>|</strong>
-        <a href="players.html">Best Players</a>
-    </nav>
+    <div class="nav">
+        <nav>
+            <a href="titlepage.html">Home</a>
+            <strong>|</strong>
+            <a href="rivalry.html">Rivalry History</a>
+            <strong>|</strong>
+            <a href="playoff.html">Playoff History</a>
+            <strong>|</strong>
+            <a href="players.html">Best Players</a>
+        </nav>
+    </div>
 
     <div class="head"> 
         <h1>Chicago Bears Playoff History</h1>
