--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -20,15 +20,17 @@
             </style>
     </head>
 <body>
-    <nav>
-        <a href="titlepage.html">Home</a>
-        <strong>|</strong>
-        <a href="rivalry.html">Rivalry History</a>
-        <strong>|</strong>
-        <a href="playoff.html">Playoff History</a>
-        <strong>|</strong>
-        <a href="players.html">Best Players</a>
-    </nav>
+    <div class="nav">
+        <nav>
+            <a href="titlepage.html">Home</a>
+            <strong>|</strong>
+            <a href="rivalry.html">Rivalry History</a>
+            <strong>|</strong>
+            <a href="playoff.html">Playoff History</a>
+            <strong>|</strong>
+            <a href="players.html">Best Players</a>
+        </nav>
+    </div>
 
     <div class="head"> 
         <h1>Chicago Bears Fight Song</h1>
