--- a/websiteproject/materials/players.html
+++ b/websiteproject/materials/players.html
@@ -9,7 +9,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
             <style>
-                .head {margin-left: 480px; color:orangered;}
+                .head {display:flex; justify-content: center; color:orangered}
                 .footer{float: inline-start; font-size: 25px; color:#ffffff}
                 .walterpayton {float: left; margin-left: 10px; margin-right: 15px;}
                 .khalilmack {float:right; margin-left: 10px; margin-right: 15px;}
@@ -19,6 +19,7 @@
             </style>
     </head>
 <body>
+    <div class="nav">
     <nav>
         <a href="titlepage.html">Home</a>
         <strong>|</strong>
@@ -28,6 +29,7 @@
         <strong>|</strong>
         <a href="players.html">Best Players</a>
     </nav>
+    </div>
 
     <div class="head"> 
         <h1>Chicago Bears Best Players</h1>
