--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -19,7 +19,7 @@
                 .paragraph2 article {padding:20px;}
                 .article1, .article2 {margin:10px;}
                 .article1 {flex:1; order:1;}
-                .article2
+                .article2 {flex:1; order:2;}
                 
             </style>
     </head>
