--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -20,6 +20,7 @@
                 .article1, .article2 {margin:10px;}
                 .article1 {flex:1; order:1;}
                 .article2 {flex:1; order:2;}
+                .p2img1 {vertical-align: middle;}
                 
             </style>
     </head>
