--- a/websiteproject/materials/players.html
+++ b/websiteproject/materials/players.html
@@ -12,7 +12,7 @@
                 .head {display:flex; justify-content: center; color:orangered}
                 .footer{float: inline-start; font-size: 25px; color:#ffffff}
                 .walterpayton {float: left; margin-left: 10px; margin-right: 15px;}
-                .khalilmack {float:right; margin-left: 10px; margin-right: 15px;}
+                .players {border-radius: 2em; border-style: solid; border-color:#C83803; padding: 15px; align-items: center; background-color: #0B162A;}
                 .paragraph1 {margin-left: 10px; font-size: 25px; color: #ffffff}
                 .paragraph2 {margin-left: 10px; font-size: 25px; color: #ffffff}
                 .body{font-family: 'News Cycle', sans-serif;}
@@ -35,6 +35,7 @@
         <h1>Chicago Bears Best Players</h1>
     </div>
 
+    <div class="players">
     <div class="walterpayton"> 
         <img src="../materials/sitemedia/walterpayton.jpg" class="walterpayton" alt="walterpayton">
     </div>
@@ -50,17 +51,17 @@
             On the offensive side of the football, running back Walter Payton is not only one of the best Chicago Bears ever, but one of the best football players to ever play professionally. He is 9x Pro-Bowler, 5x All-Pro, a 1x MVP, the 1977 Offensive Player of the Year, and a Super Bowl Champion. Payton had four seasons with over 2,000 total yards, which is incredibly impressive for a tailback. In 1977, Payton rushed for 1852 yards and 14 touchdowns. He rushed for over 1,000 yards in 10 of his 13 seasons playing football. He spent his entire career in Chicago. For all the great Chicago Bears, and all the Hall of Fame players, te Bears are notorious for never having a superstar quarterback. Their franchise is built primarily around running the ball and defense. Likely the best quarterback the Chicago Bears ever had was Jay Cutler. The Bears last playoff win came with Cutler under center. Cutler is a polarizing figure in Chicago. Many are divided, mainly because it never seemed like he tapped out his potential. However, Cutler holds the franchise passing record. While playing in Chicago, Cutler threw 2,020 completed passes for 23,443 yards, with 154 of those passes going for a touchdown. 
         </p>
     </div>
+</div>
 
-    <div class="khalilmack"> 
-        <img src="../materials/sitemedia/images.jpg" class="khalilmack" alt="khalilmack">
-    </div>
 
+
+ 
     <div class="footer">
         <footer> 
             <hr>
             &copy;2021
             <div class="quote"> 
-                <p>If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka</p>
+                If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka
             </div>
     
         </footer>
