--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -10,16 +10,25 @@
 <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
 
             <style>
-                .soldier {float:right; margin-left: 20px;margin-right: 15px;}
-                .fightsong {display: flex; justify-content: center; margin-top: 10px; margin-left: 400px; margin-right: 15px; margin-bottom: 10px; font-size: 35px; color: #ffffff;}
-                .fields {float: left; margin-left: 20px; margin-right: 10px;}
+                /*.mainpage {display: flex;}
+                .fieldscontain {order: 1}
+                .soldiercontain {order: 3}*/
+                .soldier {float:right; margin-right: 15px; border-style: solid; border-color:#C83803 ; padding: 5px; border-radius: 2em;}
+                .fightsong {display: flex;justify-content: center; text-align: center; font-size: 35px; color: #ffffff;}
+                .fields {float: left; margin-left: 20px; margin-right: 18px; border-style: solid; border-color:#C83803 ; padding: 5px; border-radius: 2em;} 
                 .logo {float:right; margin-left: 10px; margin-right: 15px; margin-bottom: 50px;}
-                .footer {float:inline-end; font-size: 30px; color: #ffffff}
-                .head {display:flex; justify-content: center; color:orangered}
+                .footer {font-size: 20px; color: #ffffff}
+                .head {display:flex; justify-content: center; color:#C83803}
                 .body{font-family: 'News Cycle', sans-serif;}
             </style>
+
+            <script>
+                function Intro (){
+                    alert('Click Ok if Green Bay sucks. Go Bears!')
+                }
+            </script>
     </head>
-<body>
+<body onload="Intro();">
     <div class="nav">
         <nav>
             <a href="titlepage.html">Home</a>
@@ -35,14 +44,14 @@
     <div class="head"> 
         <h1>Chicago Bears Fight Song</h1>
     </div>
+        <div class="mainpage">
+        <div class="soldiercontain">
+    <img src="../materials/sitemedia/images-2.jpg" class="soldier" alt="soldier">
+    <div>
 
-    <div class="soldier"> 
-        <img src="../materials/sitemedia/images-2.jpg" class="soldier" alt="soldier">
-    </div>
-
-    <div class="fields"> 
+        <div class="fieldscontain">
         <img src="../materials/sitemedia/fields.jpg" class="fields" alt="fields">
-    </div>
+        </div>
 
     <div class="fightsong"> 
     <p>
@@ -56,20 +65,21 @@
         <br>
         You’re the pride and joy of Illinois, Chicago Bears, bear down.”
         <br>
+        </p>
     </div>
-    </p>
+    </div>
+    </div>
     
-<div class="footer">
+  <div class="footer">
     <footer> 
         <hr>
         &copy;2021
         <div class="quote"> 
-            <p>If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka</p>
+            If God had wanted man to play soccer, he wouldn't have given us arms. - Mike Ditka
         </div>
-
+       
     </footer>
 </div>
-
 </body>
 
 </html>
