--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -9,14 +9,15 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
             <style>
-                .head {display:flex; justify-content: center; color:orangered}
+                .head {display:flex; justify-content: center; text-align: center; color:#C83803}
                 .footer{float: inline-start; font-size: 20px; color:#ffffff}
                 .quote {float: right;}
                 .fogbowl {display: flex; border-radius: 2em; border-style: solid; border-color:#C83803; padding: 15px; align-items: center; background-color: #0B162A;}
                 .Cutler {display: flex; margin-top: 20px; ; border-radius: 2em; border-style: solid; border-color:#C83803; padding: 15px; align-items: center; background-color: #0B162A;}
-                .fogbowlpic {order:2;}
+                .fogbowlpic {order:2; max-width: 100%;}
+                .cutlerpic {max-width: 100%;}
                 .paragraph1 {margin-left: 10px; margin-right: 10px; font-size: 25px; color: #ffffff}
-                .paragraph2 {margin-left: 18px; margin-right: 10px; font-size: 25px; color: #ffffff}
+                .paragraph22 {margin-left: 18px; margin-right: 10px; font-size: 25px; color: #ffffff}
                 .body{font-family: 'News Cycle', sans-serif;}
             </style>
     </head>
@@ -51,7 +52,7 @@
         <div class="Cutler"> 
             <img src="../materials/sitemedia/cutler.jpg" class="cutlerpic" alt="cutler">
      
-<div class="paragraph2">
+<div class="paragraph22">
         <p>
             Chicago’s most previous playoff appearance occurred in 2020. Chicago finished 8-8 in the regular season and went on the road to play the New Orleans Saints. Chicago lost that contest 21-9 and were bounced from the playoffs in the Wild Card Round. Nonetheless, one of the most famous NFL playoff games ever occurred at Soldier Field in Chicago. “The Fog Bowl” was a 1988 playoff game between the Chicago Bears and Philadelphia Eagles. An intense fog surrounded the field to the point where you could hardly see the quarterback from the sidelines. Chicago won this NFC divisional playoff by a 20-12 score. 
         </p>
