--- a/websiteproject/materials/players.html
+++ b/websiteproject/materials/players.html
@@ -11,7 +11,7 @@
             <style>
                 .head {display:flex; justify-content: center; color:orangered}
                 .footer{float: inline-start; font-size: 25px; color:#ffffff}
-                .walterpayton {float: left; margin-left: 10px; margin-right: 15px;}
+                .walterpayton {float: left; margin-left: 10px; margin-right: 15px; max-width: 100%;}
                 .players {border-radius: 2em; border-style: solid; border-color:#C83803; padding: 15px; align-items: center; background-color: #0B162A;}
                 .paragraph1 {margin-left: 10px; font-size: 25px; color: #ffffff}
                 .paragraph2 {margin-left: 10px; font-size: 25px; color: #ffffff}
