--- a/websiteproject/materials/rivalry.html
+++ b/websiteproject/materials/rivalry.html
@@ -9,20 +9,20 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
             <style>
-                .head {display:flex; justify-content: center; color:#C83803}
+                .head {display:flex; justify-content: center; text-align: center; color:#C83803}
                 .footer{float: inline-end; font-size: 20px; color:#ffffff}
                 .body{font-family: 'News Cycle', sans-serif;}
                 .rivals {display: flex; border-radius: 2em; border-style: solid; border-color:#C83803; padding: 15px; align-items: center; background-color: #0B162A; color: white} /*{float:right; margin-left: 10px; margin-right: 15px;}*/
                 .img1 {order: 2; max-width: 100%;}
                 .stopfloat {clear:both}
                 .paragraph1 {margin-left: 10px; margin-right: 10px; font-size: 20px; color: white}
-                .paragraph2 {display: flex; border-radius: 2em; border-style: solid; border-color:#C83803; margin-top: 20px; font-size: 20px; color: #ffffff; justify-content: center;}
-                .paragraph2 article {padding:20px;}
+                .paragraph12 {display: flex; border-radius: 2em; border-style: solid; border-color:#C83803; margin-top: 20px; font-size: 20px; color: #ffffff; justify-content: center;}
+                .paragraph12 article {padding:20px;}
                 .article1, .article2 {margin:10px;}
                 .article1 {flex:1; order:1; margin-right: 15px;}
                 .article2 {flex:1; order:2;}
-                .p2img1 {justify-content: center; margin-left: 30px;}
-                .p2img2 {margin-left: 30px;}
+                .p2img1 {justify-content: center; margin-left: 30px; max-width: 100%;}
+                .p2img2 {margin-left: 20px; max-width: 100%; margin-right: 10px;}
                 
                 
             </style>
@@ -59,7 +59,7 @@
         </div>
 
 
-    <div class="paragraph2">
+    <div class="paragraph12">
 
 
         <article class="article1">
