--- a/websiteproject/materials/titlepage.html
+++ b/websiteproject/materials/titlepage.html
@@ -10,10 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
 
             <style>
-                /*.mainpage {display: flex;}
-                .fieldscontain {order: 1}
-                .soldiercontain {order: 3}*/
-                .soldier {float:right; margin-right: 15px; border-style: solid; border-color:#C83803 ; padding: 5px; border-radius: 2em;}
+            
+                .soldier {float:right; margin-left: 20px;margin-right: 15px; border-style: solid; border-color:#C83803 ; padding: 5px; border-radius: 2em;}
                 .fightsong {display: flex;justify-content: center; text-align: center; font-size: 35px; color: #ffffff;}
                 .fields {float: left; margin-left: 20px; margin-right: 18px; border-style: solid; border-color:#C83803 ; padding: 5px; border-radius: 2em;} 
                 .logo {float:right; margin-left: 10px; margin-right: 15px; margin-bottom: 50px;}
