--- a/websiteproject/materials/playoff.html
+++ b/websiteproject/materials/playoff.html
@@ -25,11 +25,11 @@
     <div class="nav">
         <nav>
             <a href="titlepage.html">Home</a>
-            <strong>|</strong>
+           <span><strong>|</strong></span>
             <a href="rivalry.html">Rivalry History</a>
-            <strong>|</strong>
+            <span><strong>|</strong></span>
             <a href="playoff.html">Playoff History</a>
-            <strong>|</strong>
+            <span><strong>|</strong></span>
             <a href="players.html">Best Players</a>
         </nav>
     </div>
