--- a/websiteproject/materials/players.html
+++ b/websiteproject/materials/players.html
@@ -21,14 +21,15 @@
 <body>
     <div class="nav">
     <nav>
-        <a href="titlepage.html">Home</a>
-        <strong>|</strong>
-        <a href="rivalry.html">Rivalry History</a>
-        <strong>|</strong>
-        <a href="playoff.html">Playoff History</a>
-        <strong>|</strong>
-        <a href="players.html">Best Players</a>
-    </nav>
+        <nav>
+            <a href="titlepage.html">Home</a>
+           <span><strong>|</strong></span>
+            <a href="rivalry.html">Rivalry History</a>
+            <span><strong>|</strong></span>
+            <a href="playoff.html">Playoff History</a>
+            <span><strong>|</strong></span>
+            <a href="players.html">Best Players</a>
+        </nav>
     </div>
 
     <div class="head"> 
